<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".search.presentation.SearchFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:title="@string/search_tab"
        app:titleTextAppearance="@style/ToolbarTitleText" />

    <View
        android:id="@+id/trasparent_rectangle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/top_border"
        app:layout_constraintBottom_toBottomOf="@id/bottom_border"
        android:layout_marginHorizontal="8dp"
        android:background="@drawable/transparent_rectangle"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_border"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_border"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <View
        android:id="@+id/top_border"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_search"
        app:layout_constraintBottom_toTopOf="@id/card_details_text"
        android:layout_marginTop="8dp"
        />

    <View
        android:id="@+id/bottom_border"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/latitude"
        android:layout_marginTop="8dp"
        />

    <TextView
        android:id="@+id/emty_history_message"
        style="@style/SearchScreenMediumText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="28dp"
        android:text="@string/search_hint_text"
        app:layout_constraintStart_toStartOf="@id/left_border"
        app:layout_constraintTop_toBottomOf="@id/toolbar_history"
        app:layout_constraintBottom_toTopOf="@id/input_edit_text"
        android:visibility="visible"
        />

    <EditText
        android:id="@+id/input_edit_text"
        style="@style/EditTextSearch"
        android:inputType="numberSigned"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/text_input_layout_hint"
        android:imeOptions="actionDone"
        android:textCursorDrawable="@drawable/cursor"
        android:maxLines="1"
        android:maxLength="9"
        app:layout_constraintEnd_toStartOf="@id/right_border"
        app:layout_constraintStart_toEndOf="@id/left_border"
        app:layout_constraintTop_toBottomOf="@id/emty_history_message"
        android:paddingHorizontal="12dp"
        android:paddingVertical="10dp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_search"
        style="@style/button_search"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="64dp"
        android:layout_marginVertical="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/create_new_playlist_button_color"
        android:text="@string/search_bin"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="@id/right_border"
        app:layout_constraintStart_toStartOf="@id/left_border"
        app:layout_constraintTop_toBottomOf="@id/input_edit_text" />

    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:visibility="gone"
        tools:visibility="visible"
        android:indeterminateTint="@color/blue2"
        app:layout_constraintEnd_toEndOf="@id/right_border"
        app:layout_constraintStart_toStartOf="@id/left_border"
        app:layout_constraintBottom_toBottomOf="@id/button_search"
        app:layout_constraintTop_toTopOf="@id/button_search"
        />

    <TextView
        android:id="@+id/card_details_text"
        style="@style/SearchScreenRegularText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="28dp"
        android:text="@string/card_details"
        app:layout_constraintStart_toStartOf="@id/left_border"
        app:layout_constraintTop_toBottomOf="@id/button_search"
        android:visibility="visible"
        />

    <TextView
        android:id="@+id/payment_network"
        style="@style/SearchScreenDetailsRegularText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="0dp"
        android:text="@string/payment_network"
        app:layout_constraintStart_toStartOf="@id/left_border"
        app:layout_constraintTop_toBottomOf="@id/card_details_text"
        android:visibility="visible"
        app:layout_constrainedWidth="true"
        />

    <TextView
        android:id="@+id/payment_network_input"
        style="@style/SearchScreenDetailsInputRegularText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintStart_toStartOf="@id/left_border"
        app:layout_constraintTop_toBottomOf="@id/payment_network"
        android:visibility="visible"
        tools:text="Visa"
        />

    <TextView
        android:id="@+id/brand"
        style="@style/SearchScreenDetailsRegularText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="0dp"
        android:text="@string/brand"
        app:layout_constraintStart_toStartOf="@id/left_border"
        app:layout_constraintTop_toBottomOf="@id/payment_network_input"
        android:visibility="visible"
        />

    <TextView
        android:id="@+id/brand_input"
        style="@style/SearchScreenDetailsInputRegularText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintStart_toStartOf="@id/left_border"
        app:layout_constraintTop_toBottomOf="@id/brand"
        android:visibility="visible"
        tools:text="Visa Classic/Dankort"
        android:ellipsize="end"
        app:layout_constrainedWidth="true"
        />

    <TextView
        android:id="@+id/card_number"
        style="@style/SearchScreenDetailsRegularText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="0dp"
        android:text="@string/card_number"
        app:layout_constraintStart_toStartOf="@id/left_border"
        app:layout_constraintTop_toBottomOf="@id/brand_input"
        android:visibility="visible"
        />

    <TextView
        android:id="@+id/length_of_number"
        style="@style/SearchScreenSmallDetailsRegularText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:text="@string/number_length"
        app:layout_constraintStart_toStartOf="@id/left_border"
        app:layout_constraintTop_toBottomOf="@id/card_number"
        android:visibility="visible"
        />

    <TextView
        android:id="@+id/length_of_number_input"
        style="@style/SearchScreenDetailsInputRegularText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintStart_toStartOf="@id/left_border"
        app:layout_constraintTop_toBottomOf="@id/length_of_number"
        android:visibility="visible"
        tools:text="16"
        />

    <TextView
        android:id="@+id/luhn"
        style="@style/SearchScreenSmallDetailsRegularText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginStart="32dp"
        android:text="@string/luhn"
        app:layout_constraintStart_toEndOf="@id/length_of_number"
        app:layout_constraintTop_toBottomOf="@id/card_number"
        android:visibility="visible"
        />

    <TextView
        android:id="@+id/luhn_input"
        style="@style/SearchScreenDetailsInputRegularText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintStart_toStartOf="@+id/luhn"
        app:layout_constraintTop_toBottomOf="@id/luhn"
        android:visibility="visible"
        tools:text="Yes"
        />

    <TextView
        android:id="@+id/type"
        style="@style/SearchScreenDetailsRegularText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="0dp"
        android:layout_marginStart="24dp"
        android:text="@string/type"
        app:layout_constraintStart_toEndOf="@id/payment_network"
        app:layout_constraintTop_toBottomOf="@id/card_details_text"
        android:visibility="visible"
        app:layout_constrainedWidth="true"
        />

    <TextView
        android:id="@+id/type_input"
        style="@style/SearchScreenDetailsInputRegularText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintStart_toStartOf="@id/type"
        app:layout_constraintTop_toBottomOf="@id/type"
        android:visibility="visible"
        tools:text="@string/debit"
        />

    <TextView
        android:id="@+id/prepaid"
        style="@style/SearchScreenDetailsRegularText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="0dp"
        android:text="@string/prepaid"
        app:layout_constraintStart_toStartOf="@id/type"
        app:layout_constraintTop_toTopOf="@id/brand"
        android:visibility="visible"
        />

    <TextView
        android:id="@+id/prepaid_input"
        style="@style/SearchScreenDetailsInputRegularText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintStart_toStartOf="@id/prepaid"
        app:layout_constraintTop_toBottomOf="@id/prepaid"
        android:visibility="visible"
        tools:text="@string/yes"
        />

    <TextView
        android:id="@+id/country"
        style="@style/SearchScreenDetailsRegularText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="0dp"
        android:text="@string/country"
        app:layout_constraintStart_toStartOf="@id/prepaid"
        app:layout_constraintTop_toTopOf="@id/card_number"
        android:visibility="visible"
        />

    <TextView
        android:id="@+id/country_input"
        style="@style/SearchScreenDetailsInputRegularText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintStart_toStartOf="@id/country"
        app:layout_constraintTop_toBottomOf="@id/country"
        android:visibility="visible"
        tools:text="Denmark"
        />

    <TextView
        android:id="@+id/latitude"
        style="@style/SearchScreenCountryCoordinatesHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintStart_toStartOf="@id/country"
        app:layout_constraintTop_toBottomOf="@id/country_input"
        android:visibility="visible"
        android:text="@string/latitude"
        />

    <TextView
        android:id="@+id/latitude_input"
        style="@style/SearchScreenCountryCoordinatesInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="2dp"
        app:layout_constraintStart_toEndOf="@id/latitude"
        app:layout_constraintTop_toBottomOf="@id/country_input"
        android:visibility="visible"
        tools:text="56"
        />

    <TextView
        android:id="@+id/longitude"
        style="@style/SearchScreenCountryCoordinatesHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="4dp"
        app:layout_constraintStart_toEndOf="@id/latitude_input"
        app:layout_constraintTop_toBottomOf="@id/country_input"
        android:visibility="visible"
        android:text="@string/longitude"
        />

    <TextView
        android:id="@+id/longitude_input"
        style="@style/SearchScreenCountryCoordinatesInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="2dp"
        app:layout_constraintStart_toEndOf="@id/longitude"
        app:layout_constraintTop_toBottomOf="@id/country_input"
        android:visibility="visible"
        tools:text="10"
        />

    <TextView
        android:id="@+id/bank"
        style="@style/SearchScreenDetailsRegularText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="0dp"
        android:layout_marginStart="24dp"
        android:text="@string/bank"
        app:layout_constraintStart_toEndOf="@id/longitude_input"
        app:layout_constraintTop_toBottomOf="@id/card_details_text"
        android:visibility="visible"
        app:layout_constrainedWidth="true"
        />

    <TextView
        android:id="@+id/bank_input"
        style="@style/SearchScreenDetailsInputRegularText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintStart_toStartOf="@id/bank"
        app:layout_constraintTop_toBottomOf="@id/bank"
        app:layout_constraintEnd_toEndOf="@id/right_border"
        app:layout_constraintHorizontal_bias="0"
        android:visibility="visible"
        tools:text="Jyske Bank A/S"
        android:ellipsize="end"
        app:layout_constrainedWidth="true"
        android:maxLines="1"
        />

    <TextView
        android:id="@+id/url"
        style="@style/SearchScreenCountryCoordinatesInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintStart_toStartOf="@id/bank"
        app:layout_constraintTop_toBottomOf="@id/bank_input"
        android:visibility="visible"
        tools:text="www.jyskebank.dk"
        android:ellipsize="end"
        app:layout_constrainedWidth="true"
        android:autoLink="web"
        app:layout_constraintEnd_toEndOf="@id/right_border"
        app:layout_constraintHorizontal_bias="0"
        android:maxLines="1"
        />

    <TextView
        android:id="@+id/phone"
        style="@style/SearchScreenCountryCoordinatesInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:autoLink="phone"
        android:ellipsize="end"
        android:visibility="visible"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="@id/right_border"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/bank"
        app:layout_constraintTop_toBottomOf="@id/url"
        tools:text="+4589893300"
        android:maxLines="1"
        />

    <View
        android:id="@+id/bottom_nav_placeholder"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>